New-Upload-1755854042013/objects/Profile_User_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the permission is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Name__c</fullName>
        <description>Name of the user permission</description>
        <label>Permission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>User Permissions by Name</relationshipLabel>
        <relationshipName>User_Permissions_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>User Permissions</relationshipLabel>
        <relationshipName>User_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Profile User Permission</label>
    <nameField>
        <displayFormat>PUP-{0000}</displayFormat>
        <label>User Permission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile User Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>